Fix header not showing

--- a/app/assets/css/sass/components/_header.scss
+++ b/app/assets/css/sass/components/_header.scss
@@ -1,5 +1,7 @@
 .header {
     padding: 20px 0;
+    position: relative;
+    z-index: 10000;
     &-wrap {
         display: flex;
         align-items: center;
